--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -6,7 +6,7 @@
 5. Otros
 */
 
-.root
+:root
 {
     /*Colores*/
     --bitcoin-orange: #F7931A;
@@ -30,7 +30,6 @@ html
 {
     font-size: 62.5%;
     font-family: 'DM Sans', sans-serif;
-/*  font-family: 'Inter', sans-serif;     */
 }
 header{
     position: relative;
@@ -38,7 +37,65 @@ header{
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 33.4rem;
+    height: 334px;
     min-width: 320px;
     text-align: center;
+    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
+    
+}
+header picture img{
+    width: 180;
+    height: 28px;
+    margin-top: 60px;
+    align-items: center;
+}
+.header-title-container{
+    width: 90%;
+    min-width: 288px;
+    max-width: 900px;
+    height: 218px;
+    margin: 30px auto auto;
+}
+.header-title-container h1
+{
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 2.6rem;
+    color: var(--just-white);
+
+}
+.header-title-container p
+{
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: var(--soft-orange);
+    margin: 3rem auto 3rem;
+}
+.header-title-container .header-bottom 
+{
+    position: absolute;
+    left: calc(50% - 130px);
+    top: calc(100% - 60px);
+    display: block;
+    margin: 35px auto 0px;
+    padding: 15px;
+    width: 229px;
+    height: 20px;
+    background-color: var(--off-white);
+    /* Sombras */
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+    border: none;
+    border-radius: 1rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    text-decoration: none;
+    color: var(--black);
+}
+.header-bottom span{
+ display: inline-block;   
+ width: 13px;
+ height: 8px;
+ margin-left: 10px;
+ background-image: url("../assets/icons/down-arrow.svg");
 }
