--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -31,6 +31,7 @@ html
     font-size: 62.5%;
     font-family: 'DM Sans', sans-serif;
 }
+/*Color de fondo del header*/
 header{
     position: relative;
     display: flex;
@@ -43,12 +44,14 @@ header{
     background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
     
 }
+/*logo*/
 header picture img{
     width: 180;
     height: 28px;
     margin-top: 60px;
     align-items: center;
 }
+/*logo dimensiones*/
 .header-title-container{
     width: 90%;
     min-width: 288px;
@@ -56,22 +59,26 @@ header picture img{
     height: 218px;
     margin: 30px auto auto;
 }
+/*titulo*/
 .header-title-container h1
 {
     font-size: 2.4rem;
     font-weight: 700;
     line-height: 2.6rem;
     color: var(--just-white);
-
+    margin: 0 10px 0;
 }
+/*parrafo del header*/
 .header-title-container p
 {
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 1.8rem;
     color: var(--soft-orange);
-    margin: 3rem auto 3rem;
+    margin: 30px 10px 30px;
 }
+
+/*boton flotante*/
 .header-title-container .header-bottom 
 {
     position: absolute;
@@ -92,10 +99,367 @@ header picture img{
     text-decoration: none;
     color: var(--black);
 }
-.header-bottom span{
- display: inline-block;   
- width: 13px;
- height: 8px;
- margin-left: 10px;
- background-image: url("../assets/icons/down-arrow.svg");
+
+/*imagen del boton flotante*/
+.header-bottom span
+{
+    display: inline-block;   
+    width: 13px;
+    height: 8px;
+    margin-left: 10px;
+    background-image: url("../assets/icons/down-arrow.svg");
 }
+
+/*fondo cuerpo*/
+main
+{
+    width: 100%;
+    background-color: var(--off-white);
+    height: auto;
+}
+/*contenedor 1 dimensiones*/
+.main-exchange-container
+{
+    padding: 60px 10px 30px;
+    text-align: center;
+}
+/*tamaño minimo y maximo de la pantalla*/
+.main-exchange-container--title
+{
+    min-width: 288px;
+    max-width: 900px;
+}
+/*imagen de Bitcoin*/
+.main-exchange-container .background-img
+{
+    background-image: url("../assets/img/Bitcoin.svg") ;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto 40px;
+}
+/*titulo main*/
+.main-exchange-container--title h2
+{
+    margin: 0 10px 0;
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 2.6rem;
+    color: var(--black);
+}
+/*parrafo main*/
+.main-exchange-container--title p 
+{
+    margin: 30px 10px 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.6rem;
+    color: #757575;
+}
+/*////////////////////////Tabla 1 //////////////////////*/
+/*dimensiones de la tabla*/
+
+.main-currency-table
+{
+    width: 70%;
+    min-width: 235px;
+    max-width: 500px;
+    height: 360px;
+    margin: 0 auto 20px;
+    font-family: "Inter" , sans-serif;
+    position: relative;
+}
+/*titulo de la tabla*/
+.main-currency-table .main-currency-table--title
+{
+    width: 90%;
+    min-width: 230px;
+    max-width: 300px;
+    margin: 0 auto 15px;
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 2.3rem;
+    color: var(--bitcoin-orange);
+    text-align: start;
+    padding: 0 0 0 10px ;
+
+}
+/*tamaño de la tabla contenedora*/
+.currency-table--container
+{
+    width: 90%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 0 auto;
+}
+.currency-table--container table
+{
+    width: 100%;
+    height: 100%;
+}
+/*division de espacios y colores de la tabla contenedora*/
+.currency-table--container table td
+{
+    width: 50%;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.9rem;
+    color: var(--gray);
+    background-color: var(--just-white);
+    text-align: start;
+    padding: 0 0 0 10px ;
+    position: relative;
+}
+/*Imagen tablas*/
+.currency-table--container .table__right .down
+{
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 30px;
+    background-image: url(../assets/icons/trending-down.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.currency-table--container .table__right .up
+{
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 30px;
+    background-image: url(../assets/icons/trending-up.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+/*posicionamiento de las imagenes del contenedor tabla*/
+.currency-table--container .down
+{
+    position: absolute;
+    right: 20px;
+}
+.currency-table--container .up
+{
+    position: absolute;
+    right: 20px;
+}
+/*posicionamiento del arrow*/
+.main-arrow
+{
+    background-image: url("../assets/icons/down-arrow.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: inline-block;
+    width: 12px;
+    height: 7.5px;
+    position: absolute;
+    transform: rotate(-90deg);
+    left: 105%;
+    top: 44%;
+    max-block-size: 500px;
+}
+/*Alineacion de texto de las tablas , estilos*/
+.currency-table--container .table
+{
+    display: inline-block;
+    text-align: center;
+}
+.currency-table--container .table__right
+{
+    text-align: center;
+    padding-right: 20px;
+    font-weight: normal;
+    font-size: 1.4rem;
+    line-height: 1.7rem;
+    color:#757575
+}
+
+/*Bordes contenedor movil*/
+.currency-table--container .table__top-left
+{
+    border-radius: 15px 0 0 0 ;
+}
+.currency-table--container .table__top-right
+{
+    border-radius: 0 15px 0 0 ;
+}
+.currency-table--container .table__bottom-right
+{
+    border-radius: 0 0 15px 0 ;
+}
+.currency-table--container .table__bottom-left
+{
+    border-radius: 0 0 0 15px  ;
+}
+/*barra final*/
+.currency-table--date
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    height: 16px;
+    width: 180px;
+    min-width: 100px;
+    max-width: 300px;
+    background-color: #FFE9D5;
+    color: var(--warm-black);
+    margin: 20px auto 0;
+    border-radius: 5px;
+}
+/*////////////////////////Tabla 2 //////////////////////*/
+/*dimensiones de la tabla*/
+
+.main-currency-table2
+{
+    width: 70%;
+    min-width: 235px;
+    max-width: 500px;
+    height: 360px;
+    margin: 0 auto 20px;
+    font-family: "Inter" , sans-serif;
+    position: relative;
+}
+/*titulo de la tabla*/
+.main-currency-table2 .main-currency-table--title2
+{
+    width: 90%;
+    min-width: 230px;
+    max-width: 300px;
+    margin: 0 auto 15px;
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 2.3rem;
+    color: #1A9AF7;
+    text-align: start;
+    padding: 0 0 0 10px ;
+
+}
+/*tamaño de la tabla contenedora*/
+.currency-table--container2
+{
+    width: 90%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 0 auto;
+}
+.currency-table--container2 table
+{
+    width: 100%;
+    height: 100%;
+}
+/*division de espacios y colores de la tabla contenedora*/
+.currency-table--container2 table td
+{
+    width: 50%;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.9rem;
+    color: var(--gray);
+    background-color: var(--just-white);
+    text-align: start;
+    padding: 0 0 0 10px ;
+    position: relative;
+}
+/*posicionamiento del arrow*/
+.main-arrow2
+{
+    background-image: url("../assets/icons/down-arrow.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: inline-block;
+    width: 12px;
+    height: 7.5px;
+    position: absolute;
+    transform: rotate(90deg);
+    right: 105%;
+    top: 44%;
+    max-block-size: 500px;
+}
+/*Alineacion de texto de las tablas , estilos*/
+.currency-table--container2 .table2
+{
+    display: inline-block;
+    text-align: center;
+}
+.currency-table--container2 .table__right2
+{
+    text-align: center;
+    font-weight: normal;
+    font-size: 1.4rem;
+    line-height: 1.7rem;
+    color:#757575
+}
+
+/*Bordes contenedor movil*/
+.currency-table--container2 .table__top-left2
+{
+    border-radius: 15px 0 0 0 ;
+}
+.currency-table--container2 .table__top-right2
+{
+    border-radius: 0 15px 0 0 ;
+}
+.currency-table--container2 .table__bottom-right2
+{
+    border-radius: 0 0 15px 0 ;
+}
+.currency-table--container2 .table__bottom-left2
+{
+    border-radius: 0 0 0 15px  ;
+}
+/*barra final*/
+.currency-table--date2
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    height: 16px;
+    width: 180px;
+    min-width: 100px;
+    max-width: 300px;
+    background-color: #E7F5FF;
+    color: var(--warm-black);
+    margin: 20px auto 0;
+    border-radius: 5px;
+}
+/*/////////////////Cajas contenedoras del scroll//////////////////*/
+.main-tables-container
+{
+    display: flex;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    min-width: 288px;
+    max-width: 450px;
+    height: auto;
+    margin: 0 auto;
+}
+.container1
+{
+    display: flex;
+    scroll-snap-align: center;
+    min-width: 288px;
+    max-width: 900px;
+    margin: 0 65px 0 65px;
+}
+.container2
+{
+    display: flex;
+
+    scroll-snap-align: center;
+    min-width: 288px;
+    max-width: 900px;
+    margin: 0 65px 0 65px;
+}
+
+
