--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -463,3 +463,327 @@ main
 }
 
 
+/*//////////////////////////////Contenedor 2 ///////////////////////*/
+/*logo*/
+.main-product-detail .main-product-image 
+{
+    background-image: url(../assets/icons/batata.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 40px;
+    height: 24px;
+    display: inline-block;
+    position: absolute;
+    top: -13px;
+    right: calc(50% - 20px);
+}
+/*contenedor padre color de fondo*/
+.main-product-detail
+{
+    background-color: var(--warm-black);
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    position: relative;
+    padding: 64px 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-self:  center;
+}
+/*titulo*/
+.main-product-detail h2
+{
+    font-size: 700;
+    font-size: 2.4rem;
+    line-height: 2.6rem;
+    text-align: center;
+    color: var(--just-white);
+}
+/*parrafo*/
+.main-product-detail p
+{
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    text-align: center;
+    color: #808080;
+    margin: 20px 10px 20px;
+}
+/*cajas contenedoras*/
+.product-cards--container
+{
+    width: 85%;
+    min-width: 288px;
+    max-width: 400px;
+    height: auto;
+    background-color: var(--black);
+    padding: 15px;
+    display: flex;
+    margin: 0 auto 20px;
+    border-radius: 10px;
+    box-shadow: 0px 7px 11px 4px rgba(0,0,0,0.1);
+}
+/*titulo de caja contenedoras*/
+.product-cards--container .product-detail--card .product--card-title
+{
+    font-weight: 700;
+    font-size: 1.8rem;
+    line-height: 1.8rem;
+    color: var(--just-white);
+    margin-top: 8px;
+}
+/*parrafo de cajas contenedoras */
+.product-cards--container .product-detail--card .product--card-body
+{
+    text-align: start;
+}
+/*imagenes de los contenedores*/
+.product-cards--container .product-detail--card .icon-card
+{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover ;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+}
+/*reloj*/
+.product-cards--container .product-detail--card .clock
+{
+    background-image: url(../assets/icons/clock.svg);
+}
+/*ojos*/
+.product-cards--container .product-detail--card .vision
+{
+    background-image: url(../assets/icons/eye.svg);
+}
+/*dinero*/
+.product-cards--container .product-detail--card .stonks
+{
+    background-image: url(../assets/icons/dollar-sign.svg);
+}
+/*check*/
+.product-cards--container .product-detail--card .check
+{
+    background-image: url(../assets/icons/check-circle.svg);
+}
+/*///////////////////////////////Container2//////////////////////*/
+.bitcoin-img-container
+{
+    width: 100%;
+    min-width: 320px;
+    height: 50vh;
+    background-image: url(../assets/img/bitcoinbaby2x.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+}
+.bitcoin-img-container h2
+{
+    padding-top: 60px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+/*////////////////////////////Container3/////////////////*/
+/*tamaño del contenedor */
+.main-plans-container
+{
+    width: 100%;
+    min-width: 320px;
+    padding: 40px 0 50px;
+    height: auto;
+    text-align: center;
+}
+/*titulo dimensiones*/
+.plans--title
+{
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+}
+/*titulo*/
+.plans--title h2
+{
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 2.6rem;
+    color: var(--black) ;
+}
+/*parrafo*/
+.plans--title p
+{
+    margin: 40px 0 50px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #757575;
+}
+/*caja contenedor de los planes*/
+.plans-container--card
+{
+    position: relative;
+    width: 60%;
+    min-width: 211.2px;
+    max-width: 300px;
+    margin: auto auto 50px auto;
+    height: 250px;
+    background-color: var(--just-white);
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+}
+/*recomendacion*/
+.plans-container--card .recommended
+{
+    color: var(--just-white);
+    background-color: var(--bitcoin-orange);font-size: 1.2rem;
+    border-radius: 5px;
+    font-weight: 700;
+    line-height: 1.5rem;
+    width: 101px;
+    height: 31px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top:-15.5px;
+    left: calc(50% - 50.5px);
+    font-family: "Inter" , sans-serif;
+}
+/*tamano interno del contenedor*/
+.plan-info-container
+{
+    position: relative;
+    margin: auto;
+    width: 80%;
+}
+/*titulo del contenedor*/
+.plan-info-container .plan-card--title
+{
+    padding: 15px 0 10px;
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    color: #000000;
+}
+/*ubicacion del $ dollar*/
+.plan-info-container p span
+{
+    font-weight: 500;
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    font-family: "Inter" ,  sans-serif;
+    position: absolute;
+    top: calc(25% + 20px);
+    left: calc(50% - 37px);
+    color: #363636;
+}
+/*precios*/
+.plan-card--price 
+{
+    font-family: "Inter" , sans-serif;
+    font-weight: 700;
+    font-size: 5.2rem;
+    line-height: 6.3rem;
+    letter-spacing: -0.08em;
+    color: #000000;
+}
+/*parrafo*/
+.plan-card-saving
+{
+    font-family: "Inter" , sans-serif;
+    font-weight: 500;
+    font-size: 1.2rem;
+    line-height: 15px;
+    text-align: center;
+    margin: 20px auto 30px;
+    color: #757575;
+}
+/*boton dimensiones y ubicacion*/
+.plan-card--ca
+{
+    border: 0.2rem solid var(--bitcoin-orange);
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 18px;
+    color: var(--warm-black);
+    display: inline-block;
+    width: 150px;
+    min-width: 100px;
+    max-width: 280px;
+    height: 40px;
+    border-radius: 3px;
+    background-color: var(--off-white);
+    position: relative;
+    text-align: start;
+    padding-left: 20px;
+}
+/* ubicacion del arrow */
+.plan-info-container button span
+{
+    display: inline-block;
+    position: absolute;
+    background-image: url(../assets/icons/orange-right-arrow.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 28px;
+    height: 28px;
+    top : calc(50% - 14px);
+    left: 110px;
+}
+
+/*/////////////////Cajas contenedoras del scroll 2//////////////////*/
+.plans-container--sider
+{
+    display: flex;
+    overflow-x:scroll;
+    vertical-align: middle;
+    overscroll-behavior-x: contain;
+    scroll-snap-align: center;
+    scroll-snap-type: x mandatory;
+    padding: 18px 70px;
+}
+.plans-container--card
+{
+    display: flex;
+    scroll-snap-align: center;
+    min-width: 211.2px;
+    max-width: 450px;
+    height: 270px;
+    min-height: 220px;
+    margin: 0 20px;
+}
+/*seccion de preguntas tamaño*/
+.plans-container--question
+{
+    width: 90%;
+    margin: 30px auto 0;
+    position: relative;
+}
+/*estilo de los parrafos*/
+.plans-container--question .question p
+{
+    text-align: start;
+    margin: 0 0 10px 0;
+    width: 90%;
+}
+/*tamaño*/
+.plans-container--question .question :nth-child(2)
+{
+    margin: 40px 0 10px;
+}
+/*imagen*/
+.plans-container--question .question span
+{
+    background-image: url(../assets/icons/down-arrow.svg);
+    display: inline-block;
+    position: absolute;
+    width: 12px ;
+    height: 7.41px;
+    right: 10px;
+}
