--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -41,7 +41,7 @@ header{
     height: 334px;
     min-width: 320px;
     text-align: center;
-    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
+    background: linear-gradient(207.8deg, #201f1c 16.69%, var(--bitcoin-orange) 100%);
     
 }
 /*logo*/
@@ -128,6 +128,8 @@ main
 {
     min-width: 288px;
     max-width: 900px;
+    margin: auto;
+
 }
 /*imagen de Bitcoin*/
 .main-exchange-container .background-img
@@ -167,7 +169,7 @@ main
     min-width: 235px;
     max-width: 500px;
     height: 360px;
-    margin: 0 auto 20px;
+    margin: 0 40px 20px 0;
     font-family: "Inter" , sans-serif;
     position: relative;
 }
@@ -247,22 +249,7 @@ main
     position: absolute;
     right: 20px;
 }
-/*posicionamiento del arrow*/
-.main-arrow
-{
-    background-image: url("../assets/icons/down-arrow.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: inline-block;
-    width: 12px;
-    height: 7.5px;
-    position: absolute;
-    transform: rotate(-90deg);
-    left: 105%;
-    top: 44%;
-    max-block-size: 500px;
-}
+
 /*Alineacion de texto de las tablas , estilos*/
 .currency-table--container .table
 {
@@ -322,7 +309,7 @@ main
     min-width: 235px;
     max-width: 500px;
     height: 360px;
-    margin: 0 auto 20px;
+    margin: 0 0 20px 40px;
     font-family: "Inter" , sans-serif;
     position: relative;
 }
@@ -367,22 +354,6 @@ main
     text-align: start;
     padding: 0 0 0 10px ;
     position: relative;
-}
-/*posicionamiento del arrow*/
-.main-arrow2
-{
-    background-image: url("../assets/icons/down-arrow.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: inline-block;
-    width: 12px;
-    height: 7.5px;
-    position: absolute;
-    transform: rotate(90deg);
-    right: 105%;
-    top: 44%;
-    max-block-size: 500px;
 }
 /*Alineacion de texto de las tablas , estilos*/
 .currency-table--container2 .table2
@@ -437,31 +408,13 @@ main
 .main-tables-container
 {
     display: flex;
-    overflow-x: scroll;
+    overflow-x:scroll;
+    vertical-align: middle;
+    overscroll-behavior-x: contain;
+    scroll-snap-align: center;
     scroll-snap-type: x mandatory;
-    min-width: 288px;
-    max-width: 450px;
-    height: auto;
-    margin: 0 auto;
+    padding: 18px 70px;
 }
-.container1
-{
-    display: flex;
-    scroll-snap-align: center;
-    min-width: 288px;
-    max-width: 900px;
-    margin: 0 65px 0 65px;
-}
-.container2
-{
-    display: flex;
-
-    scroll-snap-align: center;
-    min-width: 288px;
-    max-width: 900px;
-    margin: 0 65px 0 65px;
-}
-
 
 /*//////////////////////////////Contenedor 2 ///////////////////////*/
 /*logo*/
@@ -482,14 +435,21 @@ main
 .main-product-detail
 {
     background-color: var(--warm-black);
-    width: 100%;
+    width: calc(100% - 40px);
     min-width: 320px;
     height: auto;
     position: relative;
-    padding: 64px 0 20px;
+    padding: 64px 20px 20px;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-self:  center;
+}
+/*contenedor parrafo*/
+.main-product-detail div
+{
+    text-align: center;
+    margin: 0 auto;
+    width: calc(100% - 40px);
 }
 /*titulo*/
 .main-product-detail h2
@@ -499,6 +459,7 @@ main
     line-height: 2.6rem;
     text-align: center;
     color: var(--just-white);
+    margin: 0 auto;
 }
 /*parrafo*/
 .main-product-detail p
@@ -508,7 +469,7 @@ main
     line-height: 1.8rem;
     text-align: center;
     color: #808080;
-    margin: 20px 10px 20px;
+    margin: 20px auto 20px;
 }
 /*cajas contenedoras*/
 .product-cards--container
@@ -519,7 +480,6 @@ main
     height: auto;
     background-color: var(--black);
     padding: 15px;
-    display: flex;
     margin: 0 auto 20px;
     border-radius: 10px;
     box-shadow: 0px 7px 11px 4px rgba(0,0,0,0.1);
@@ -758,6 +718,7 @@ main
     min-height: 220px;
     margin: 0 20px;
 }
+
 /*seccion de preguntas tamaño*/
 .plans-container--question
 {
@@ -786,4 +747,36 @@ main
     width: 12px ;
     height: 7.41px;
     right: 10px;
+}
+
+/*///////////////////////////Footer//////////////////////////////*/
+footer
+{
+    display: flex;
+    width: 100%;
+    height: 150px;
+    background-color: var(--bitcoin-orange);
+}
+footer section
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+footer .left ul
+{
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    list-style: none;
+}
+.left li
+{
+    margin: 10px 0;
+}
+.left a
+{
+    text-decoration: none;
+    color: var(--just-white);
 }
